--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -1,11 +1,22 @@
+# encryption support
 on init
     chmod 0660 /dev/qseecom
     chown system drmrpc /dev/qseecom
     chmod 0664 /dev/ion
     chown system system /dev/ion
 
-# separate copy needed to use /sbin/linker64 instead of /system/bin/linker64
-service sbinqseecomd /sbin/qseecomd
+on early-fs
+    start setup-decrypt
+
+service qseecomd /sbin/qseecomd
+    oneshot
+    disabled
+    user root
+    group root
+    seclabel u:r:recovery:s0
+
+# use decryption libraries from /system if available
+service setup-decrypt /sbin/setup_decrypt
     oneshot
     disabled
     user root
@@ -13,4 +24,4 @@ service sbinqseecomd /sbin/qseecomd
     seclabel u:r:recovery:s0
 
 on property:ro.crypto.state=encrypted
-    start sbinqseecomd
+start qseecomd
